fixed spacing issue in config single page

--- a/css/main.css
+++ b/css/main.css
@@ -1071,7 +1071,7 @@ h6{
     text-decoration: underline;
 }
 
-.config-items-tab{
+.tab-contents{
     padding-top: 10px;
 }
 
